# SPIC

./: # 6月LT.md  .slidecli-settings.json  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release-homebrew.yml
docs/: cheatsheet.md  hard-off.md
scripts/: render-homebrew-formula.sh
src/: app.rs  config.rs  input.rs  kgp.rs  lib.rs  main.rs  markdown.rs  model.rs  render.rs  ui.rs
src/present/: cache.rs  fingerprint.rs  mod.rs  runtime.rs  state.rs
