[package]
name = "slidecli"
version = "0.1.0"
edition = "2021"
default-run = "slidecli"

[[bin]]
name = "slidecli"
path = "src/main.rs"

[dependencies]
ratatui = "=0.24.0"
crossterm = "=0.26.0"
serde = { version = "=1.0.193", features = ["derive"] }
serde_json = "=1.0.108"
anyhow = "=1.0.75"
fontdue = "=0.8.0"
image = { version = "=0.24.7", default-features = false, features = ["png"] }
base64 = "=0.21.5"
