[package]
name = "slidecli"
version = "0.1.2"
edition = "2021"
default-run = "slidecli"
description = "Terminal slide editor and presenter"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Yukkurisiteikitai/SPIC"
homepage = "https://github.com/Yukkurisiteikitai/SPIC"

[[bin]]
name = "slidecli"
path = "src/main.rs"

[dependencies]
ratatui = "=0.24.0"
crossterm = "=0.26.0"
serde = { version = "=1.0.193", features = ["derive"] }
anyhow = "=1.0.75"
